--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -52,10 +52,19 @@ main:
 - identifier: lessons
   name: Lessons
   url: "/lessons/"
+  parent: null 
+  weight: 30
 # Main Carpentries site
 - identifier: carpentries
   name: The Carpentries
-  url: "https://carpentries.org"
+  url: "https://carp-new-website.netlify.app/"
+  parent: null
+  weight: 40
+- identifier: search
+  name: Search
+  url: /search/
+  parent: null
+  weight: 50
 
 footer:
 # Footer menu: Menu 1
