--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -4,3 +4,5 @@ logo: lc_logo.svg
 dc-website: https://dc-new-website.netlify.app/
 swc-website:  https://swc-new-website.netlify.app/
 carpentries-website: https://carp-new-website.netlify.app/
+
+footer_overview_text: Library Carpentry is a lesson program of The Carpentries. Cake pastry candy carrot cake croissant tootsie roll chocolate bar dragée cotton candy.
