--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -22,14 +22,19 @@ main:
   url: "/"
   parent: null
   weight: 10
+- identifier: library-carpentry
+  name: Library Carpentry
+  url: /about-us/
+  parent: about-us
+  weight: 10
 - identifier: governance
   name: Governance
-  pageRef: "/governance/"
+  pageRef: "/about-us/governance/"
   parent: about-us
   weight: 20
 - identifier: curriculum-advisors
   name:  Curriculum Advisors
-  url: /curriculum-advisors/
+  url: /about-us/curriculum-advisors/
   parent: about-us
   weight: 30
 # Learn Menu
