--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: S3/CloudFront deployment beta.librarycarpentry.carpentries.org
+name: S3/CloudFront deployment beta.librarycarpentry.org
 
 on:
   push:
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build-website:
-    if: github.repository_owner == 'carpentries'
+    if: github.repository_owner == 'LibraryCarpentry'
     runs-on: ubuntu-22.04
     
     defaults:
