--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -2,8 +2,8 @@ logo: lc_logo.svg
 logoFooter: lc_logo.svg
 
 # Other websites
-dc-website: https://dc-new-website.netlify.app/
-swc-website:  https://swc-new-website.netlify.app/
-carpentries-website: https://carp-new-website.netlify.app/
+dc-website: https://datacarpentry.org/
+swc-website:  https://software-carpentry.org/
+carpentries-website: https://carpentries.org/
 
 footer_overview_text: Library Carpentry is a lesson program of The Carpentries.
