--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -6,4 +6,7 @@ dc-website: https://datacarpentry.org/
 swc-website:  https://software-carpentry.org/
 carpentries-website: https://carpentries.org/
 
+carpentries_workshops_page: https://carpentries.org/workshops/
+carpentries_handbook: https://docs.carpentries.org 
+
 footer_overview_text: Library Carpentry is a lesson program of The Carpentries.
