--- a/data/curriculum.yaml
+++ b/data/curriculum.yaml
@@ -1,83 +1,83 @@
 curricula:
 
 - lessonname: Tidy Data
-  site: https://librarycarpentry.org/lc-spreadsheets/
+  site: https://librarycarpentry.github.io/lc-spreadsheets/
   repo: https://github.com/librarycarpentry/lc-spreadsheets/
-  ref: https://librarycarpentry.org/lc-spreadsheets/reference.html
-  inst_notes: https://librarycarpentry.org/lc-spreadsheets/guide/
+  ref: https://librarycarpentry.github.io/lc-spreadsheets/reference.html
+  inst_notes: https://librarycarpentry.github.io/lc-spreadsheets/guide/
   maintainers: Marco Chiapello, Jesse Johnston 
   status: Stable
   category: core
 
 - lessonname: Introduction to Working with Data (Regular Expressions)
-  site: https://librarycarpentry.org/lc-data-intro/
+  site: https://librarycarpentry.github.io/lc-data-intro/
   repo: https://github.com/librarycarpentry/lc-data-intro/
-  ref: https://librarycarpentry.org/lc-data-intro/reference.html
-  inst_notes: https://librarycarpentry.org/lc-data-intro/instructor/instructor-notes
+  ref: https://librarycarpentry.github.io/lc-data-intro/reference.html
+  inst_notes: https://librarycarpentry.github.io/lc-data-intro/instructor/instructor-notes
   maintainers: Freddy Chia, Kevin French
   status: Stable
   category: core
 
 - lessonname: The UNIX Shell
-  site: https://librarycarpentry.org/lc-shell/
+  site: https://librarycarpentry.github.io/lc-shell/
   repo: https://github.com/librarycarpentry/lc-shell/
-  ref: https://librarycarpentry.org/lc-shell/reference.html
-  inst_notes: https://librarycarpentry.org/lc-data-intro/instructor/instructor-notes
+  ref: https://librarycarpentry.github.io/lc-shell/reference.html
+  inst_notes: https://librarycarpentry.github.io/lc-data-intro/instructor/instructor-notes
   maintainers: Jamie Jamison, Kaitlin Newson
   status: Stable
   category: core
 
 - lessonname: OpenRefine	
-  site: https://librarycarpentry.org/lc-open-refine/
+  site: https://librarycarpentry.github.io/lc-open-refine/
   repo: https://github.com/librarycarpentry/lc-open-refine/
-  ref: https://librarycarpentry.org/lc-open-refine/reference.html
-  inst_notes: https://librarycarpentry.org/lc-open-refine/instructor/instructor-notes
+  ref: https://librarycarpentry.github.io/lc-open-refine/reference.html
+  inst_notes: https://librarycarpentry.github.io/lc-open-refine/instructor/instructor-notes
   maintainers: Roman Kuhn, Max Prud'homme, Owen Stephens, Jennifer Stubbs
   status: Stable
   category: core
 
 - lessonname: Introduction to Git
-  site: https://librarycarpentry.org/lc-git/
+  site: https://librarycarpentry.github.io/lc-git/
   repo: https://github.com/librarycarpentry/lc-git/
-  ref: https://librarycarpentry.org/lc-git/reference.html
-  inst_notes: https://librarycarpentry.org/lc-git/instructor/instructor-notes
+  ref: https://librarycarpentry.github.io/lc-git/reference.html
+  inst_notes: https://librarycarpentry.github.io/lc-git/instructor/instructor-notes
   maintainers: Seth Erickson, Elizabeth McAulay
   status: Stable
   category: core
 
 - lessonname: SQL
-  site: https://librarycarpentry.org/lc-sql/
+  site: https://librarycarpentry.github.io/lc-sql/
   repo: https://github.com/librarycarpentry/lc-sql/
-  ref: https://librarycarpentry.org/lc-sql/reference.html
-  inst_notes: https://librarycarpentry.org/lc-sql/guide/
+  ref: https://librarycarpentry.github.io/lc-sql/reference.html
+  inst_notes: https://librarycarpentry.github.io/lc-sql/guide/
   maintainers: Julika Mimkes, Annajiat Alim Rasel
   status: Stable
   category: extended
 
 - lessonname: Introduction to Python	
-  site: https://librarycarpentry.org/lc-python-intro/
+  site: https://librarycarpentry.github.io/lc-python-intro/
   repo: https://github.com/librarycarpentry/lc-python-intro/
-  ref: https://librarycarpentry.org/lc-python-intro/reference.html
-  inst_notes: https://librarycarpentry.org/lc-python-intro/guide/
+  ref: https://librarycarpentry.github.io/lc-python-intro/reference.html
+  inst_notes: https://librarycarpentry.github.io/lc-python-intro/guide/
   maintainers: Cody Hennesy, Tim Dennis
   status: Alpha
   category: extended
 
 
 - lessonname: Introduction to Data for Archivists
-  site: https://librarycarpentry.org/lc-data-intro-archives/
+  site: https://librarycarpentry.github.io/lc-data-intro-archives/
   repo: https://github.com/librarycarpentry/lc-data-intro-archives/
-  ref: https://librarycarpentry.org/lc-data-intro-archives/reference.html
-  inst_notes: https://librarycarpentry.org/lc-data-intro-archives/guide/
+  ref: https://librarycarpentry.github.io/lc-data-intro-archives/reference.html
+  inst_notes: https://librarycarpentry.github.io/lc-data-intro-archives/guide/
   maintainers: Katherine Koziar*
   status: Alpha
   category: extended
 
 - lessonname: Introduction to R
-  site: https://librarycarpentry.org/lc-r/
+  site: https://librarycarpentry.github.io/lc-r/
   repo: https://github.com/librarycarpentry/lc-r/
-  ref: https://librarycarpentry.org/lc-r/reference.html
-  inst_notes: https://librarycarpentry.org/lc-r/guide/
+  ref: https://librarycarpentry.github.io/lc-r/reference.html
+  inst_notes: https://librarycarpentry.github.io/lc-r/guide/
   maintainers: Jia Qi Beh, Tim Dennis
   status: Alpha
   category: extended
@@ -114,9 +114,9 @@ curricula:
 
 
 - lessonname: Top 10 FAIR Data & Software Things
-  site: https://librarycarpentry.org/Top-10-FAIR/
+  site: https://librarycarpentry.github.io/Top-10-FAIR/
   repo: https://github.com/librarycarpentry/Top-10-FAIR/
-  ref: https://librarycarpentry.org/Top-10-FAIR/about/
+  ref: https://librarycarpentry.github.io/Top-10-FAIR/about/
   inst_notes: http://doi.org/10.5281/zenodo.3409968
   maintainers: 
   status: Retired
@@ -125,35 +125,35 @@ curricula:
 - lessonname: Webscraping
   site: https://carpentries-incubator.github.io/lc-webscraping/
   repo: https://github.com/carpentries-incubator/lc-webscraping/
-  ref: https://librarycarpentry.org/lc-overview/reference.html
-  inst_notes: https://librarycarpentry.org/lc-overview/guide/
+  ref: https://librarycarpentry.github.io/lc-overview/reference.html
+  inst_notes: https://librarycarpentry.github.io/lc-overview/guide/
   maintainers: Thomas Guignard
   status: Retired
   category: retired 
 
 - lessonname: Workshop Overview
-  site: https://librarycarpentry.org/lc-overview/
+  site: https://librarycarpentry.github.io/lc-overview/
   repo: https://github.com/librarycarpentry/lc-overview
-  ref: https://librarycarpentry.org/lc-overview/reference.html
-  inst_notes: https://librarycarpentry.org/lc-overview/guide/
+  ref: https://librarycarpentry.github.io/lc-overview/reference.html
+  inst_notes: https://librarycarpentry.github.io/lc-overview/guide/
   maintainers: 	Elizabeth McAulay
   status: Retired
   category: retired
 
 - lessonname: Wikidata
-  site: https://librarycarpentry.org/lc-wikidata/
+  site: https://librarycarpentry.github.io/lc-wikidata/
   repo: https://github.com/LibraryCarpentry/lc-wikidata
-  ref: https://librarycarpentry.org/lc-wikidata/reference.html
-  inst_notes: https://librarycarpentry.org/lc-wikidata/guide/
+  ref: https://librarycarpentry.github.io/lc-wikidata/reference.html
+  inst_notes: https://librarycarpentry.github.io/lc-wikidata/guide/
   maintainers: Rabea Müller
   status: Conceptual
   category: conceptual
 
 - lessonname: FAIR Data & Software
-  site: https://librarycarpentry.org/lc-fair-research/
+  site: https://librarycarpentry.github.io/lc-fair-research/
   repo: https://github.com/LibraryCarpentry/lc-fair-research
-  ref: https://librarycarpentry.org/lc-fair-research/reference.html
-  inst_notes: https://librarycarpentry.org/lc-fair-research/guide/
+  ref: https://librarycarpentry.github.io/lc-fair-research/reference.html
+  inst_notes: https://librarycarpentry.github.io/lc-fair-research/guide/
   maintainers: 
   status: Conceptual
   category: conceptual
