--- a/data/curriculum.yaml
+++ b/data/curriculum.yaml
@@ -4,7 +4,7 @@ curricula:
   site: https://librarycarpentry.github.io/lc-spreadsheets/
   repo: https://github.com/librarycarpentry/lc-spreadsheets/
   ref: https://librarycarpentry.github.io/lc-spreadsheets/reference.html
-  inst_notes: https://librarycarpentry.github.io/lc-spreadsheets/guide/
+  inst_notes: https://librarycarpentry.github.io/lc-spreadsheets/instructor/instructor-notes.html
   maintainers: Marco Chiapello, Jesse Johnston 
   status: Stable
   category: core
@@ -13,7 +13,7 @@ curricula:
   site: https://librarycarpentry.github.io/lc-data-intro/
   repo: https://github.com/librarycarpentry/lc-data-intro/
   ref: https://librarycarpentry.github.io/lc-data-intro/reference.html
-  inst_notes: https://librarycarpentry.github.io/lc-data-intro/instructor/instructor-notes
+  inst_notes: https://librarycarpentry.github.io/lc-data-intro/instructor/instructor-notes.html
   maintainers: Freddy Chia, Kevin French
   status: Stable
   category: core
@@ -49,7 +49,7 @@ curricula:
   site: https://librarycarpentry.github.io/lc-sql/
   repo: https://github.com/librarycarpentry/lc-sql/
   ref: https://librarycarpentry.github.io/lc-sql/reference.html
-  inst_notes: https://librarycarpentry.github.io/lc-sql/guide/
+  inst_notes: https://librarycarpentry.github.io/lc-sql/instructor/instructor-notes.html
   maintainers: Julika Mimkes, Annajiat Alim Rasel
   status: Stable
   category: extended
@@ -58,7 +58,7 @@ curricula:
   site: https://librarycarpentry.github.io/lc-python-intro/
   repo: https://github.com/librarycarpentry/lc-python-intro/
   ref: https://librarycarpentry.github.io/lc-python-intro/reference.html
-  inst_notes: https://librarycarpentry.github.io/lc-python-intro/guide/
+  inst_notes: https://librarycarpentry.github.io/lc-python-intro/instructor/instructor-notes.html
   maintainers: Cody Hennesy, Tim Dennis
   status: Alpha
   category: extended
@@ -68,7 +68,7 @@ curricula:
   site: https://librarycarpentry.github.io/lc-data-intro-archives/
   repo: https://github.com/librarycarpentry/lc-data-intro-archives/
   ref: https://librarycarpentry.github.io/lc-data-intro-archives/reference.html
-  inst_notes: https://librarycarpentry.github.io/lc-data-intro-archives/guide/
+  inst_notes: https://librarycarpentry.github.io/lc-data-intro-archives/instructor/instructor-notes.html
   maintainers: Katherine Koziar*
   status: Alpha
   category: extended
@@ -77,7 +77,7 @@ curricula:
   site: https://librarycarpentry.github.io/lc-r/
   repo: https://github.com/librarycarpentry/lc-r/
   ref: https://librarycarpentry.github.io/lc-r/reference.html
-  inst_notes: https://librarycarpentry.github.io/lc-r/guide/
+  inst_notes: https://librarycarpentry.github.io/lc-r/instructor/instructor-notes.html
   maintainers: Jia Qi Beh, Tim Dennis
   status: Alpha
   category: extended
@@ -87,7 +87,7 @@ curricula:
   site: https://librarycarpentry.github.io/lc-marcedit/
   repo: https://github.com/LibraryCarpentry/lc-marcedit
   ref: https://librarycarpentry.github.io/lc-marcedit/reference.html
-  inst_notes: https://librarycarpentry.github.io/lc-marcedit/guide/
+  inst_notes: https://librarycarpentry.github.io/lc-marcedit/instructor/instructor-notes.html
   maintainers: Jennifer Eustis*, Abigail Sparling*, Owen Stephens (looking for Maintainers)
   status: Alpha
   category: extended
@@ -107,7 +107,7 @@ curricula:
   site: https://librarycarpentry.github.io/lc-dmp101/
   repo: https://github.com/LibraryCarpentry/lc-dmp101
   ref: https://librarycarpentry.github.io/lc-dmp101/reference.html
-  inst_notes: https://librarycarpentry.github.io/lc-dmp101/guide/index.html
+  inst_notes: https://librarycarpentry.github.io/lc-dmp101/instructor/instructor-notes.html
   maintainers: Lena Bohman, Marla Hertz, Daria Orlowska
   status: Alpha
   category: extended
@@ -125,8 +125,8 @@ curricula:
 - lessonname: Webscraping
   site: https://carpentries-incubator.github.io/lc-webscraping/
   repo: https://github.com/carpentries-incubator/lc-webscraping/
-  ref: https://librarycarpentry.github.io/lc-overview/reference.html
-  inst_notes: https://librarycarpentry.github.io/lc-overview/guide/
+  ref: https://carpentries-incubator.github.io/lc-webscraping/reference.html
+  inst_notes: https://carpentries-incubator.github.io/lc-webscraping/guide/index.html
   maintainers: Thomas Guignard
   status: Retired
   category: retired 
@@ -135,7 +135,7 @@ curricula:
   site: https://librarycarpentry.github.io/lc-overview/
   repo: https://github.com/librarycarpentry/lc-overview
   ref: https://librarycarpentry.github.io/lc-overview/reference.html
-  inst_notes: https://librarycarpentry.github.io/lc-overview/guide/
+  inst_notes: https://librarycarpentry.github.io/lc-overview/instructor/instructor-notes.html
   maintainers: 	Elizabeth McAulay
   status: Retired
   category: retired
@@ -144,7 +144,7 @@ curricula:
   site: https://librarycarpentry.github.io/lc-wikidata/
   repo: https://github.com/LibraryCarpentry/lc-wikidata
   ref: https://librarycarpentry.github.io/lc-wikidata/reference.html
-  inst_notes: https://librarycarpentry.github.io/lc-wikidata/guide/
+  inst_notes: https://librarycarpentry.github.io/lc-wikidata/instructor/instructor-notes.html
   maintainers: Rabea Müller
   status: Conceptual
   category: conceptual
