--- a/data/curriculum.yaml
+++ b/data/curriculum.yaml
@@ -112,6 +112,14 @@ curricula:
   status: Alpha
   category: extended
 
+- lessonname:  Introducing Computational Thinking
+  site: https://librarycarpentry.github.io/lc-computational-thinking/
+  repo: https://github.com/LibraryCarpentry/lc-computational-thinking
+  ref: https://librarycarpentry.github.io/lc-computational-thinking/instructor/reference.html
+  inst_notes: https://librarycarpentry.github.io/lc-dmp101/instructor/instructor-notes.html
+  maintainers: Tim Dennis
+  status: Alpha
+  category: extended
 
 - lessonname: Top 10 FAIR Data & Software Things
   site: https://librarycarpentry.github.io/Top-10-FAIR/
