--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -219,4 +219,9 @@ socials:
   params:
     img: "/youtube-logo.svg"
   weight: 60
+- name: Bluesky
+  url: "https://bsky.app/profile/carpentries.carpentries.org"
+  params:
+    img: "/bluesky-logo.svg"
+    weight: 70
 
