add donation link with tracking

--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -14,3 +14,6 @@ carpentries_workshops_page: https://carpentries.org/workshops/
 carpentries_handbook: https://docs.carpentries.org 
 
 footer_overview_text: Library Carpentry is a lesson program of The Carpentries.
+
+# Donate 
+donate_url: https://www.zeffy.com/en-US/donation-form/donate-to-make-a-difference-7497?utm_source=librarycarpentry
